2004-11-22  Ilja Booij  <ilja@Ilja-Booijs-Computer.local>

	* pipe.c (send_reply): Reverted back from "Delivered-To" to 
	"Deliver-To".

	* main.c (do_showhelp): Reverted back from "Delivered-To" to 
	"Deliver-To". 
	(main): Reverted back from "Delivered-To" to 
	"Deliver-To".

	* header.c: Reverted back from "Delivered-To" to 
	"Deliver-To".

2004-11-15  Aaron Stone  <aaron@serendipity.cx>

	* db.c, db.h: added count-only counterparts db_count_iplog
	and db_deleted_count.
	* maintenance.c: basically a rewrite. -n, -y flags are respected,
	-a flag is added. messages are cleaner, -v more useful.

2004-11-15  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, imapcommands.c: fixed the segfaults caused by
	double frees.
	
2004-11-10  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, dbmail-imapsession.c, dbmail-imapsession.h: changed 
	db_get_msginfo_range to dbmail_imap_session_get_msginfo_range and
	moved it to dbmail-imapsession.c
	* imapcommands.c: minor cleanup in _ic_fetch.
	
2004-11-04  Paul Stevens <paul@nfg.nl>
	
	* dbmail-imapsession.c: fixed broken fetch command.

2004-11-01  Aaron Stone  <aaron@serendipity.cx>

	* INSTALL: couple of minor edits, per Sean Kelly.
	* maintenance.c: changed references to "-f... fix" to "-r... repair"

2004-10-31  Aaron Stone  <aaron@serendipity.cx>

	* db.c, dbmail.conf, dbmailtypes.h, sievecmd.c, sievecmd.h,
	sort/sortsieve.c, ql/mysql/create_tables.mysql,
	sql/mysql/create_tables_innoDB.mysql, timsieved.c: fully
	accepted libSieve patch by Leif Jackson, nice work!

2004-10-31  Aaron Stone  <aaron@serendipity.cx>

	* user.c (do_delete): now deletes aliases belonging to a user
	before the user is deleted; the prototype to the function now
	includes useridnr.
	* maintenance.c: -q quiet flag is respected.
	* auth/authsql.c: added escaping code for all SQL strings, and
	suggest building a better framework for this in the future.

2004-10-25  Paul Stevens <paul@nfg.nl>
