@@ -103,4 +103,5 @@ GString * g_list_join(GList * list, char * sep);
 GList * g_string_split(GString * string, char * sep);
 GList * g_list_append_printf(GList * list, char * format, ...);
 
+int mime_unwrap(char *to, const char *from); 
 #endif
